2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.mdp: Updated.
	* Mono.Addins/ExtensionContext.cs: Fixed GetExtensionObjects overload
	  which was not using the correct reuseCachedInstance value.
	* Mono.Addins/ExtensionTree.cs: Improved error message. When looking
	  for a type in an assembly, avoid throwing an exception too early,
	  since it may be found in other assemblies.
	* Mono.Addins.Database/AddinDatabase.cs: In the addin info cache, also
	  store information about unsuccessful lookups, to avoid looking for
	  an add-in again if we found that it doesn't exist. In Update(),
	  don't use verbose output by default.

2007-04-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup.ProgressMonitoring/NullProgressMonitor.cs: Fix
	  warning.
	* Mono.Addins.Setup/SetupTool.cs, Makefile.am: Use ISO-1 compliant c#
	  only.

2007-04-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup.csproj: Added msbuild project files. Patch by
	  Matthijs ter Woord.
	* Mono.Addins.Setup/AddinPackage.cs, Mono.Addins.Setup/AddinStore.cs,
	  Mono.Addins.Setup/SetupTool.cs,
	  Mono.Addins.Setup/RepositoryRegistry.cs: Removed Mono.Posix
	  dependency. Patch by Matthijs ter Woord.

2007-03-30  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup/SetupTool.cs: Cosmetic fixes.
	* Mono.Addins.Setup/RepositoryRegistry.cs: Fix NRE (repoList may change
	  as a result of initializing the configuration).

2007-03-23  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup.mdp, Makefile.am: Removed unused file.
